--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<link rel="icon" href="/images/icon-blue.svg">
+		<title>Scalewhale</title>
 	</head>
 	<body>
 		<div style="display: contents">%sveltekit.body%</div>
